# arrow_fail_read_example

./: Cargo.toml  example_lines.txt  example_snowflake_data
src/: main.rs
